--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="section">Scroll Down for Video</div>
     <div class="video-container">
       <video id="myVideo" autoplay muted playsinline>
-        <source src="VID_20241227_220837_541.mp4" type="video/mp4">
+        <source src="shorts(480P).mp4" type="video/mp4">
         Your browser does not support HTML5 video.
       </video>
     </div>
