--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="section">Scroll Down for Video</div>
     <div class="video-container">
       <video id="myVideo" autoplay muted playsinline>
-        <source src="shorts(480P).mp4" type="video/mp4">
+        <source src="https://github.com/stardust108/Testing-video/blob/main/Ride%20It%20Lose%20Control%20Sabrina%20carpenter%20work%20It%20movie%20--%20_shorts(480P).mp4" type="video/mp4">
         Your browser does not support HTML5 video.
       </video>
     </div>
